--- a/WebBlog/appsettings.json
+++ b/WebBlog/appsettings.json
@@ -3,6 +3,11 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    },
-"AllowedHosts": "*"
+    }, 
+  "AllowedHosts": "*",
+  "Data": {
+    "WebBlog": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=WebBlog;Trusted_Connection=True;MultipleActiveResultSets=True"
+    }
+  }
 }
