Revert "created database"
This reverts commit d76d33e0

--- a/WebBlog/appsettings.json
+++ b/WebBlog/appsettings.json
@@ -3,11 +3,6 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    }, 
-  "AllowedHosts": "*",
-  "Data": {
-    "WebBlog": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=WebBlog;Trusted_Connection=True;MultipleActiveResultSets=True"
-    }
-  }
+    },
+"AllowedHosts": "*"
 }
