--- a/WebBlog/WebBlog.csproj
+++ b/WebBlog/WebBlog.csproj
@@ -13,21 +13,23 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0-preview1.19508.20" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
     </ItemGroup>
 
     <ItemGroup>
         <!-- Don't publish the SPA source files, but do show them in the project files list -->
         <Content Remove="$(SpaRoot)**" />
+        <Content Include="ClientApp\src\app\customers\customers.component.html" />
+        <Content Include="ClientApp\src\app\login\login.component.html" />
         <None Remove="$(SpaRoot)**" />
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
-        <None Include="ClientApp\src\app\test\test.component.ts" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Model\ViewData" />
+        <None Include="ClientApp\src\app\customers\customers.component.ts" />
+        <None Include="ClientApp\src\app\login\login.component.ts" />
+        <None Include="ClientApp\src\app\shared\services\guards\auth-guard.service.ts" />
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
