add angular forms validations

--- a/WebBlog/WebBlog.csproj
+++ b/WebBlog/WebBlog.csproj
@@ -46,7 +46,10 @@
         <None Include="ClientApp\src\app\customers\customers.component.ts" />
         <None Include="ClientApp\src\app\login\login.component.ts" />
         <None Include="ClientApp\src\app\post\customers.component.html" />
+        <None Include="ClientApp\src\app\shared\forms\login.form.ts" />
         <None Include="ClientApp\src\app\shared\services\guards\auth-guard.service.ts" />
+        <None Include="ClientApp\src\app\shared\services\guards\auth-guard.service.ts" />
+        <None Include="ClientApp\src\app\shared\services\guards\role-guard.service.ts" />
         <None Include="ClientApp\src\assets\css\blog.css" />
         <None Include="ClientApp\src\assets\img\logo.png" />
     </ItemGroup>
