--- a/WebBlog/ClientApp/package.json
+++ b/WebBlog/ClientApp/package.json
@@ -30,6 +30,8 @@
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.4.0",
+    "videogular": "^2.2.1",
+    "videogular2": "^7.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
