--- a/WebBlog/WebBlog.csproj
+++ b/WebBlog/WebBlog.csproj
@@ -103,12 +103,15 @@
         <None Include="ClientApp\src\app\post\customers.component.html" />
         <None Include="ClientApp\src\app\shared\classes\tagViewData.interface.ts" />
         <None Include="ClientApp\src\app\shared\forms\login.form.ts" />
+        <None Include="ClientApp\src\app\shared\guards\auth.guard.ts" />
+        <None Include="ClientApp\src\app\shared\guards\role.guard.ts" />
         <None Include="ClientApp\src\app\shared\helpers\token.helpers.ts" />
         <None Include="ClientApp\src\app\shared\interfaces\pagingInfo.interface.ts" />
         <None Include="ClientApp\src\app\shared\interfaces\post.interface.ts" />
         <None Include="ClientApp\src\app\shared\interfaces\postViewData.interface.ts" />
         <None Include="ClientApp\src\app\shared\interfaces\tagViewData.interface.ts" />
         <None Include="ClientApp\src\app\shared\interfaces\userPostsViewData.interface.ts" />
+        <None Include="ClientApp\src\app\shared\pipes\created.pipe.ts" />
         <None Include="ClientApp\src\app\shared\services\auth.service.ts" />
         <None Include="ClientApp\src\app\shared\services\guards\auth-guard.service.ts" />
         <None Include="ClientApp\src\app\shared\services\guards\auth-guard.service.ts" />
